--- a/components/Pages/Dashboard/Graphs/Margin/ComposedGraph/styles.module.css
+++ b/components/Pages/Dashboard/Graphs/Margin/ComposedGraph/styles.module.css
@@ -3,5 +3,19 @@
 }
 
 .graphContainer {
-  @apply flex h-full flex-col;
+  @apply relative flex h-full flex-col;
+}
+
+.yAxisLabelLeft {
+  @apply absolute left-3 top-1/2 text-gray-400;
+  transform: translateY(-50%) rotate(-180deg);
+  writing-mode: vertical-rl;
+  text-orientation: mixed;
+}
+
+.yAxisLabelRight {
+  @apply absolute right-3 top-1/2 text-gray-400;
+  transform: translateY(-50%);
+  writing-mode: vertical-rl;
+  text-orientation: mixed;
 }
