--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,7 @@
 
 @layer base {
   :root {
+    --sidebar-width: 17rem;
     --background: 0 0% 100%;
     --foreground: 240 10% 3.9%;
     --card: 0 0% 100%;
@@ -32,6 +33,7 @@
   }
 
   .dark {
+    --sidebar-width: 17rem;
     --background: 240 10% 3.9%;
     --foreground: 0 0% 98%;
     --card: 240 10% 3.9%;
